--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
- <button type="button">Saludar</button>
-  
+ <button type="button" onclick="alerta()">Saludar</button>
+ <script>
+  function alerta() {
+      alert("Hola!");
+  }
+</script>
 </body>
 </html>
