--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <meta charset="UTF-8">
   <title>Taller semana 7</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <script src="/ruta/al/script.js"></script>
+  <script src="eventos.js" type="text/javascript"></script>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+  <div id="eldiv">
  <button type="button" onclick="alerta()">Saludar</button>
  <script>
   function alerta() {
       alert("Hola!");
   }
 </script>
+</div>
+
 </body>
 </html>
